--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             align-items: center;
             height: 100vh;
             text-align: center;
-            background: url('1706902803038.jpg') no-repeat center center/cover;
+            background: url('imggg.jpeg') no-repeat center center/cover;
             position: relative;
             overflow: hidden;
         }
